--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body id="page-top" data-bs-target="#mainNav" data-bs-offset="77" data-bs-spy="scroll">
-    <nav class="navbar navbar-light navbar-expand-md sticky-top" id="mainNav">
+    <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
         <div class="container"><a class="navbar-brand" href="#">kYrell</a><button data-bs-toggle="collapse"
                 class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i
