--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image: url('assets/img/intro-bg.jpg');scroll-snap-align: start;">
+    <header class="masthead" style="background-image: url('assets/img/intro-bg.jpg');">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
@@ -69,7 +69,7 @@
         </div>
     </header>
     <section class="text-center content-section" id="steps" data-bs-smooth-scroll="true" data-bs-target="#mainNav"
-        style="height: 325%;">
+        style="height: 220vh;">
         <div class="container">
             <h2 class="text-start">steps</h2>
             <ul class="text-start">
